# vecidx

./: CMakeLists.txt  LICENSE  README.md  vecidx.sln  vecidx.vcxproj
test/: CMakeLists.txt  SimpleTest.cpp
vecidx/: search_index.h  smart_step.h  tree_index.h  vector_index.h
